--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -2,17 +2,18 @@
 <html lang="{{ .Site.LanguageCode }}">
 
 <head>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WDB76CX');
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139153744-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-139153744-1");
   </script>
-  <!-- End Google Tag Manager -->
+  <!-- End global site tag (gtag.js) - Google Analytics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -97,12 +98,6 @@
 </head>
 
 <body class="{{ if .Site.Params.rtl }}rtl{{ end }} {{ if .Site.Params.inverted }}inverted{{ end }}">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WDB76CX" height="0" width="0"
-      style="display:none;visibility:hidden" />
-  </noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <main class="wrapper">
     {{ partial "header.html" . }}
 
@@ -114,7 +109,6 @@
   </main>
 
   {{ template "_internal/google_analytics.html" . }}
-
 </body>
 
 </html>
